--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,5 @@
+channels:
+- conda-forge
 dependencies:
 - python=3.7
 - pandas
@@ -12,3 +14,4 @@ dependencies:
 - scipy
 - cython
 - opencv
+- libusb
